<resources>
    <string name="app_name" translatable="false">LibreContexto</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_fragment_label">Menu</string>
    <string name="howtoplay_fragment_label">How To Play</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="howtoplay_help">
        Find the secret word. You have unlimited guesses.\n\n
        The words were sorted by an artificial intelligence algorithm according to how similar
        they were to the secret word.\n\n
        After submitting a word, you will see its position. The secret word is number 1.\n\n
        The algorithm analyzed thousands of texts. It uses the context in which words are used to calculate the similarity between them.
    </string>

    <string name="today">Today\'s game:</string>
    <string name="start">Start</string>
    <string name="previous_games">Previous games</string>
    <string name="settings">Settings</string>
    <string name="how_to_play">How to play</string>
    <string name="okay">Okay</string>
    <string name="negative_number">Select a date no lower than 18/9/2022</string>
    <string name="in_progress">In progress</string>
    <string name="no_game_yet">There is no game for this date yet</string>
    <string name="today_num" translatable="false">#%1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>